# checkers-simple-algorithm

./: CMakeLists.txt  README.md  checkers.cpp  checkers.h  checkersAI.cpp  checkers_test.cpp
